--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -20,7 +20,7 @@ collections:
             fields:
               - { label: "Name", name: "name", widget: "string" }
               - { label: "Description", name: "description", widget: "text" }
-  - name: "pages"
+  - name: "pages2"
     label: "Pages"
     files:
       - label: "Home"
